[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/list.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/dots.svg" type="Texture" id=2]
[ext_resource path="res://assets/style_empty.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/font_list_title.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.721569, 0.72549, 0.756863, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
bg_color = Color( 0.0352941, 0.117647, 0.258824, 1 )

[node name="List" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 252.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 280.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalContent" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VerticalContent"]
margin_right = 264.0
margin_bottom = 25.0

[node name="Title" type="Label" parent="MarginContainer/VerticalContent/TitleContainer"]
margin_right = 228.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "List Title"

[node name="ListActionsButton" type="ToolButton" parent="MarginContainer/VerticalContent/TitleContainer"]
self_modulate = Color( 1, 1, 1, 0.52549 )
margin_left = 232.0
margin_right = 264.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 18 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
icon = ExtResource( 2 )
expand_icon = true

[node name="AddCardButton" type="ToolButton" parent="MarginContainer/VerticalContent"]
margin_top = 29.0
margin_right = 264.0
margin_bottom = 51.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
text = "+ Add a card"
align = 0

[node name="CardContainerScroll" type="ScrollContainer" parent="MarginContainer/VerticalContent"]
margin_top = 55.0
margin_right = 264.0
margin_bottom = 584.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = ExtResource( 3 )
scroll_horizontal_enabled = false

[node name="CardContainer" type="VBoxContainer" parent="MarginContainer/VerticalContent/CardContainerScroll"]
margin_right = 264.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VerticalContent/TitleContainer/ListActionsButton" to="." method="_on_ListActionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VerticalContent/AddCardButton" to="." method="_on_AddCardButton_pressed"]
